--- a/042-purpose.tex
+++ b/042-purpose.tex
@@ -1,1 +1,6 @@
-What should we say here?
+The purpose of this document is:
+\begin{enumerate}
+    \item Presentation results of the current work package; pointer to reports, software and videos.
+    \item Introduction to whole-body motion planning and a description of our contribution to this topic.
+    \item Description of how the developed software packages can be used by others.
+\end{enumerate}
