--- a/01-titlepage.tex
+++ b/01-titlepage.tex
@@ -36,8 +36,7 @@ Contributors
 Keywords
 	& Whole-body, motion, control, planning, collision avoidance, topological, maps\\
 Abstract &
-	The promosing whole-body control method only operates at a local scope and therefore suffers of local minima.
-Therefore, a planner is required that provides connectivity information at a global scope while constraining only the DoFs that are relevant for the task at hand. This work presents a topological planner for manipulation, where the topological graph is an abstract representation of possible robot configurations that describes possible sequences of motions.
+	The promosing whole-body control method only operates at a local scope and therefore suffers of local minima. Therefore, a planner is required that provides connectivity information at a global scope while constraining only the DoFs that are relevant for the task at hand. This work presents a topological planner for manipulation, where the topological graph is an abstract representation of possible robot configurations that describes possible sequences of motions. \\
 \hline
 \end{tabular}
 \vfill\eject
