added acronym package and acronyms

--- a/03-acronyms.tex
+++ b/03-acronyms.tex
@@ -1,11 +1,10 @@
 \section*{List of Acronyms}
 \addcontentsline{toc}{section}{List of Acronyms}
 
-\begin{longtable}{p{3cm}p{11.5cm}}
-%	\setlength{\tabcolsep}{1cm}
-	
-ACRONYM
-	& definition text\\
-
-\end{longtable}
-
+\begin{acronym}
+\acro{DoF}			{Degrees of Freedom}
+\acro{AMIGO}        {Autonomous Mate for IntelliGent Operations}
+\acro{WBC}			{Whole-Body Control}
+\acro{ROS}			{Robot Operating System (\citet{ROS})}
+\acro{PRM}			{Probabilistic RoadMap}
+\end{acronym}
