--- a/999-includes.tex
+++ b/999-includes.tex
@@ -9,6 +9,8 @@
 \renewcommand{\dateseparator}{-}
 \renewcommand{\timeseparator}{:}
 
+\usepackage{acronym}					% Acronyms
+
 % ---------------------------------------------------------------------
 % page and text formatting
 % ---------------------------------------------------------------------
