--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,13 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: Cp1252
 
+@WEBSITE{ROS,
+	url={http://www.ros.org/},
+	title={Robot Operating System},
+	author={ROS},
+	year={2014},
+}
+
 @INCOLLECTION{Sucan2009,
   author = {\c{S}ucan, Ioan A. and Kavraki, Lydia E.},
   title = {Kinodynamic Motion Planning by Interior-Exterior Cell Exploration},
@@ -1150,7 +1157,7 @@
 	References: Arai, T., Robots with integrated locomotion and manipulation
 	and their future (1996) IROS'96, pp. 541-545. , November, Osaka,
 	Japan; Bayle, B., (2001) ModÃ©lisation et Commande CinÃ©matiques
-	des Manipulateurs Mobiles Ã Roues, , PhD Thesis, LAAS-CNRS, Toulouse
+	des Manipulateurs Mobiles ï¿½ Roues, , PhD Thesis, LAAS-CNRS, Toulouse
 	University; Bayle, B., Fourquet, J.-Y., Renaud, M., Manipulateurs
 	mobiles: ProblÃ©matiques et Ã©tat de l'art (2000) Technical Report
 	No 00087, , March, LAAS-CNRS, Toulouse, France; Bayle, B., Fourquet,
@@ -1201,7 +1208,7 @@
 	G., Fourquet, J.-Y., Renaud, M., Coordinating mobility and manipulation
 	using non-holonomic mobile manipulators (1999) Control Engineering
 	Practice, 7, pp. 391-399; Fourquet, J.-Y., Renaud, M., Contribution
-	Ã la gÃ©nÃ©ration de trajectoires pour un systÃ¨me mÃ©canique constituÃ©
+	ï¿½ la gÃ©nÃ©ration de trajectoires pour un systÃ¨me mÃ©canique constituÃ©
 	d'une plate-forme mobile non-holonome et d'un bras manipulateur (1996)
 	Technical Report No 96501, , LAAS-CNRS, Toulouse, France; Fourquet,
 	J.-Y., Renaud, M., Coordinated control of a non-holonomic mobile
@@ -3238,7 +3245,7 @@
 	environment this representation is extended with a model of the occupancy
 	probability if no sensor measurements are received and a model to
 	deal with unpredictably moving obstacles that can arise from behind
-	occlusions by always expecting obstacles to appear on the robot’s
+	occlusions by always expecting obstacles to appear on the robotï¿½s
 	path. By combining the occupancy probability of volumes with the
 	position uncertainty of the robot, a probability of collision is
 	obtained. It is shown that by relating this probability to a safe
@@ -5955,14 +5962,14 @@
 	must achieve a specified goal under kinematic and/or dynamic motion
 	constraints while avoiding collision with moving obstacles with known
 	trajectories. The planner encodes the motion constraints on the robot
-	with a control system and samples the robot's state — time space
+	with a control system and samples the robot's state ï¿½ time space
 	by picking control inputs at random and integrating its equations
 	of motion. The result is a probabilistic roadmap of sampled state
-	— time points, called milestones, connected by short admissible trajectories.
+	ï¿½ time points, called milestones, connected by short admissible trajectories.
 	The planner does not precompute the roadmap; instead, for each planning
 	query, it generates a new roadmap to connect an initial and a goal
-	state — time point. The paper presents a detailed analysis of the
-	planner's convergence rate. It shows that, if the state — time space
+	state ï¿½ time point. The paper presents a detailed analysis of the
+	planner's convergence rate. It shows that, if the state ï¿½ time space
 	satisfies a geometric property called expansiveness, then a slightly
 	idealized version of our implemented planner is guaranteed to find
 	a trajectory when one exists, with probability quickly converging
@@ -10856,7 +10863,7 @@
   month = {dec},
   abstract = {To synthesize whole-body behaviors interactively, multiple behavioral
 	primitives need to be simultaneously controlled, including those
-	that guarantee that the constraints imposed by the robot’s structure
+	that guarantee that the constraints imposed by the robotï¿½s structure
 	and the external environment are satisfied. Behavioral primitives
 	are entities for the control of various movement criteria, e.g. primitives
 	describing the behavior of the center of gravity, the behaviors of
@@ -11933,7 +11940,7 @@
 }
 
 @ARTICLE{Tchon2002,
-  author = {Tcho\'{n}„, Krzysztof and Jakubiak, Janusz},
+  author = {Tcho\'{n}ï¿½, Krzysztof and Jakubiak, Janusz},
   title = {Extended Jacobian inverse kinematics algorithms for mobile manipulators},
   journal = {Journal of Robotic Systems},
   year = {2002},
@@ -12265,7 +12272,7 @@
 	extension of these planners to solving re-grasping problems. The
 	capabilities of combining IK methods and planners are shown both
 	in simulation and on the humanoid robot ARMAR-III performing dual-arm
-	tasks in a kitchen environment. © 2009 IEEE.},
+	tasks in a kitchen environment. ï¿½ 2009 IEEE.},
   file = {:G\:\\PhD Project\\Research Papers\\Conference Papers\\Vahrenkamp_2009.pdf:PDF},
   issn = {9781424438044 (ISBN)},
   keywords = {Arm motions, Collision-free trajectory, Computation costs, Computationally
@@ -12364,8 +12371,8 @@
 }
 
 @INPROCEEDINGS{Vanthienen2011,
-  author = {Vanthienen, Nick and De Laet, Tinne and Decré, Wilm and Smits, Ruben
-	and Klotzbücher, Markus and Buys, Koen and Bellens, Steven and Gherardi,
+  author = {Vanthienen, Nick and De Laet, Tinne and Decrï¿½, Wilm and Smits, Ruben
+	and Klotzbï¿½cher, Markus and Buys, Koen and Bellens, Steven and Gherardi,
 	Luca and Bruyninckx, Herman and De Schutter, Joris},
   title = {iTaSC as a unified framework for task specification, control, and
 	coordination, demonstrated on the PR2},
