--- a/03-acronyms.tex
+++ b/03-acronyms.tex
@@ -3,6 +3,7 @@
 
 \begin{acronym}
 \acro{DoF}			{Degrees of Freedom}
+\acro{IK}			{Inverse Kinematics}
 \acro{AMIGO}        {Autonomous Mate for IntelliGent Operations}
 \acro{WBC}			{Whole-Body Control}
 \acro{ROS}			{Robot Operating System (\citet{ROS})}
