processed comments Jesse

--- a/00-defines.tex
+++ b/00-defines.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % change only this line, e.g. to 91.3 for D91.3
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\THEDELIV}{ab.cd}
+\newcommand{\THEDELIV}{23.40}
 
 \pagestyle{fancy}
 
