--- a/01-titlepage.tex
+++ b/01-titlepage.tex
@@ -26,17 +26,17 @@ Dissemination level
 Date of Delivery
 	& (fill me)\\
 Deliverable Number
-	& (fill me)\\
+	& D23.40 \\
 AL / Task related
 	& (fill me)\\
 Author
-	& Appeldoorn, R.P.W\\
+	& Appeldoorn, R.P.W. \\
 Contributors
-	& Lunenburg, J.J.M., Derksen, T.J.J., Metsemakers, P.M.G.\\
+	& Lunenburg, J.J.M., Derksen T.J.J., Metsemakers, P.M.G.\\
 Keywords
 	& Whole-body, motion, control, planning, collision avoidance, topological, maps\\
 Abstract &
-	The promosing whole-body control method only operates at a local scope and therefore suffers of local minima. Therefore, a planner is required that provides connectivity information at a global scope while constraining only the DoFs that are relevant for the task at hand. This work presents a topological planner for manipulation, where the topological graph is an abstract representation of possible robot configurations that describes possible sequences of motions. \\
+	The whole-body control method only operates at a local scope and therefore suffers of local minima. Therefore, a planner is required that provides connectivity information at a global scope while constraining only the DoFs that are relevant for the task at hand. This work presents a topological planner for manipulation, where the topological graph is an abstract representation of possible robot configurations that describes possible sequences of motions. \\
 \hline
 \end{tabular}
 \vfill\eject
