--- a/02-history.tex
+++ b/02-history.tex
@@ -9,29 +9,16 @@
 \rowcolor[gray]{0.8}
 \bf Ver. & \bf Date & \bf Changes & \bf Author\\
 \hline
-0.0 
-	&
-	&
-	&
+0.1 
+	& 31-1-2016
+	& First version
+	& Appeldoorn, R.P.W.
 	\\
 \hline
 \end{tabular}
 
 \vfill
 \textbf{Note: Filename should be}\\ 
-“R5-COP\_D\#\#\_\#.pdf”, e.g. „R5-COP\_D91.1\_v0.1\_TUBS.pdf“
+“R5-COP\_D23.40\_TUE.pdf”
 
-\textbf{
-Fields are defined as follows
-\begin{enumerate}
-\item Deliverable number	*.*
-\item Revision number (should not be required with LaTeX ... use versioning!)
-	\begin{itemize}
-	\item draft version	\hfill v
-	\item approved	\hfill a
-	\item version sequence (two digits)	\hfill *.*
-	\end{itemize}
-\item Company identification (Partner acronym)	\hfill *
-\end{enumerate}
-}
 \vfill\eject
