--- a/041-summary.tex
+++ b/041-summary.tex
@@ -6,17 +6,19 @@ All nodes in the topological graph are grounded to specific end-effector attract
 \subsubsection{Results}
 
 \paragraph{Reports}
+The report is a result of the work performed by multiple people at the TUE; contributions were made by Lunenburg, J.J.M., Derksen T.J.J. and Metsemakers, P.M.G.. Next to this deliverable report, the following reports can be consulted on whole-body-motion control for general purpose service robots.
 \begin{longtable}{|p{8.5cm}p{4cm}p{2cm}|}
 \hline
 \rowcolor[gray]{0.8} \bf Title / URL & \bf Author & \bf Year \\
 \hline
 \href{http://repository.tue.nl/762360}{Reactive collision avoidance for domestic service robots} & Metsemakers, P.M.G. & 2013 \\
-\href{http://repository.tue.nl/778410}{Global path planning for the reactive whole-body controller} & Derksen, T.J.J. & 2014 \\
+\href{http://repository.tue.nl/778410}{Global path planning for the reactive whole-body controller} & Derksen T.J.J & 2014 \\
 \href{http://repository.tue.nl/794842}{Context-aware design and motion planning for autonomous service robots} & Lunenburg, J.J.M. & 2015 \\
 \hline
 \end{longtable}
 
 \paragraph{Software}
+While doing research to the topic of whole-body motion planning, two open-source software packages are developed. These ROS-packages are publicly available on \href{http://github.com}{github.com}. Section \ref{ap:integration} describes how the two different packages can be integrated in a third party software stack.
 \begin{longtable}{|p{6cm}p{9cm}|}
 \hline
 \rowcolor[gray]{0.8} \bf Package / URL & \bf Description\\
@@ -27,6 +29,8 @@ All nodes in the topological graph are grounded to specific end-effector attract
 \end{longtable}
 
 \paragraph{Videos}
+\label{videos}
+The following videos demonstrate the developed whole-body controller and planner derived from the work within this project. 
 \begin{longtable}{|p{6cm}p{9cm}|}
 \hline
 \rowcolor[gray]{0.8} \bf Video / URL & \bf Description\\
