processed last comments Jesse and added TODO comments for videos

--- a/02-history.tex
+++ b/02-history.tex
@@ -17,8 +17,8 @@
 \hline
 \end{tabular}
 
-\vfill
-\textbf{Note: Filename should be}\\ 
-“R5-COP\_D23.40\_TUE.pdf”
+%\vfill
+%\textbf{Note: Filename should be}\\ 
+%“R5-COP\_D23.40\_TUE.pdf”
 
 \vfill\eject
