--- a/041-summary.tex
+++ b/041-summary.tex
@@ -35,8 +35,8 @@ The following videos demonstrate the developed whole-body controller and planner
 \hline
 \rowcolor[gray]{0.8} \bf Video / URL & \bf Description\\
 \hline
-\href{https://www.youtube.com/watch?v=Fc9SOGC_sMA}{youtube/reactive\_collision\_avoidance} & Reactive collision avoidance with the AMIGO robot \\
-\href{https://www.youtube.com/watch?v=Fc9SOGC_sMA}{youtube/whole\_body\_planning} & Whole-Body motion planning with the AMIGO robot\\
+\href{https://www.youtube.com/watch?v=Fc9SOGC_sMA}{TODO: youtube/reactive\_collision\_avoidance} & Reactive collision avoidance with the AMIGO robot \\
+\href{https://www.youtube.com/watch?v=Fc9SOGC_sMA}{TODO: youtube/whole\_body\_planning} & Whole-Body motion planning with the AMIGO robot\\
 \hline
 \end{longtable}
 
