--- a/02-history.tex
+++ b/02-history.tex
@@ -1,3 +1,6 @@
+\section*{Abstract}
+The whole-body control method only operates at a local scope and therefore suffers of local minima. Therefore, a planner is required that provides connectivity information at a global scope while constraining only the DoFs that are relevant for the task at hand. This work presents a topological planner for manipulation, where the topological graph is an abstract representation of possible robot configurations that describes possible sequences of motions.
+
 \section*{Document History}
 \addcontentsline{toc}{section}{Document History}
 
